--- a/Capstone/dwh.cfg
+++ b/Capstone/dwh.cfg
@@ -1,5 +1,5 @@
 [CLUSTER]
-HOST=dwhcluster.c1trwqphaylu.us-west-2.redshift.amazonaws.com
+HOST=dwhcluster..redshift.amazonaws.com
 DB_NAME=
 DB_USER=
 DB_PASSWORD=
@@ -9,7 +9,7 @@ DB_PORT=5439
 ARN=
 
 [S3]
-s3_bucket='s3a://capstone-data-engineering/'
+s3_bucket='s3a://<bucket-name>/'
 
 [AWS_CREDENTIALS]
 AWS_ACCESS_KEY_ID=
@@ -21,7 +21,7 @@ DWH_CLUSTER_TYPE=multi-node
 DWH_NUM_NODES=2
 DWH_NODE_TYPE=dc2.large
 
-DWH_IAM_ROLE_NAME=dwhRole
+DWH_IAM_ROLE_NAME=
 DWH_CLUSTER_IDENTIFIER=
 DWH_DB=
 DWH_DB_USER=
